<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glimpse</string>
    <string name="app_id">551143668249123</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="new_entry">New</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_entry_edit">EntryEditActivity</string>
    <string name="save_entry">Save Entry</string>
    <string name="show_entry">Show Entries</string>
    <string name="take_img">Take Photo</string>
    <string name="show_img">Show Image</string>
    <string name="location">Get Location</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="gmail_login">Login with Google Account</string>
    <string name="title_activity_google_login">GoogleLoginActivity</string>
    <string name="back_to_login">Back to Login Page</string>
    <string name="logo">Logo</string>
    <string name="loading">Loading</string>
    <string name="post_facebook_status">Post Status to Facebook</string>
    <string name="upload_facebook_image">Upload Image to Facebook</string>
    <string name="user_profile_image">User Profile Image</string>

</resources>